# jsonl-schema-validator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
benches/: adaptive_prefix_map_bench.rs  micro_util_bench.rs
samples/: a-schema.json  large-file-schema.json  readme.md
src/: adaptive_prefix_map.rs  main.rs  micro_util.rs  u8p.rs  validate.rs
