[package]
name = "json-schema-validator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jsonsv"
path = "src/main.rs"

[dependencies]
rustc-hash = "2.1.1"
clap = { version = "4.5.35", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
rand = "0.9.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "micro_util_bench"
harness = false

[[bench]]
name = "adaptive_prefix_map_bench"
harness = false
